--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,11 @@
-.red-text{
-    font-size: 2em;
-    color: red;
+.header{
+    padding: 5px 10px;
+    top: 0px;
+    left: 0px;
+    z-index: 99999;
+}
+.main-layout{
+    margin-top: 60px;
+    padding: 15px;
+    min-height: calc(100vh - 130px);
 }
