--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -48,5 +48,8 @@
 
 // @import '~ngx-toastr/toastr';
 
-html, body { height: 100%; }
-body { margin: 0; }
+// html, body { height: 100%; }
+body { 
+    margin: 0px; 
+    padding: 0px;
+}
