updated basic docs

--- a/src/app/basic-topics/index/index.component.html
+++ b/src/app/basic-topics/index/index.component.html
@@ -1,18 +1,19 @@
 <h1>Basic Of gits</h1>
-<p>git has three satges of a filegit has three satges of a file</p>
+<p>git is a open source distributed version control system, which simply means it can track changes on source code.</p>
+
+<p class="mb-0">git has three satges of a file</p>
 <ul>
     <li>commited</li>
     <li>modified</li>
     <li>stagged</li>
 </ul>
 
-<p>Three States of a git Project</p>
+<p class="mb-0">Three States of a git Project</p>
 <ul>
     <li>working directory</li>
     <li>Stagin Area (index)</li>
     <li>.git directory (Repository)</li>
 </ul>
-
 
 
 <p>git config --global user.name "name" </p>
